--- a/admin/templates/style.css
+++ b/admin/templates/style.css
@@ -7,13 +7,13 @@
     background: #F8F8FF;
   }
   
-  .header {
-    width: 20%;
+  .heading {
+    width: 30%;
     margin: 50px auto 0px;
     color: white;
     background: #800000;
     text-align: center;
-    border: 1px solid #B0C4DE;
+    border: 1px solid #800000;
     border-bottom: none;
     border-radius: 10px 10px 0px 0px;
     padding: 20px;
@@ -26,15 +26,15 @@
     background: white;
     border-radius: 0px 0px 10px 10px;
   }
-  .input-group {
+  .inputform {
     margin: 10px 0px 10px 0px;
   }
-  .input-group label {
+  .inputform label {
     display: block;
     text-align: left;
     margin: 3px;
   }
-  .input-group input {
+  .inputform input {
     height: 30px;
     width: 93%;
     padding: 5px 10px;
