--- a/lecturers/templates/css/style.css
+++ b/lecturers/templates/css/style.css
@@ -1,3 +1,4 @@
+/* It removes all default margin and padding for every object on the page  */
 * {
     margin: 0px;
     padding: 0px;
@@ -6,6 +7,7 @@
     font-size: 120%;
     background: #F8F8FF;
   }
+   /* margin -  create space around elements */
   
   .heading {
     width: 30%;
@@ -18,6 +20,8 @@
     border-radius: 10px 10px 0px 0px;
     padding: 20px;
   }
+    /* padding:space inside an element. */
+      /* margin: top,right,bottom,left */
   form, .content {
     width: 30%;
     margin: 0px auto;
@@ -34,6 +38,7 @@
     text-align: left;
     margin: 3px;
   }
+  /* padding:space inside an element. */
   .inputform input {
     height: 30px;
     width: 93%;
@@ -50,19 +55,4 @@
     border: none;
     border-radius: 5px;
   }
-  .error {
-    width: 92%; 
-    margin: 0px auto; 
-    padding: 10px; 
-    border: 1px solid #a94442; 
-    color: #a94442; 
-    background: #f2dede; 
-    border-radius: 5px; 
-    text-align: left;
-  }
-  .success {
-    color: #3c763d; 
-    background: #dff0d8; 
-    border: 1px solid #3c763d;
-    margin-bottom: 20px;
-  }
+  /* border-radius property defines the radius of the element's corners. */
